tests/errors/lifetime/loan/multi_loan_conflict_on_a_after_join.err.expected
error: at 14:13: [LT-LoanConflict] In function 'f', block 'merge': cannot write to 'a': already borrowed by 'r'
    |
 14 |             a = 1;
    |             ^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
